deploy/k8s/clusters/cpu-test/letsencrypt/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-ml-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.test4rest-service.ru
      secretName: edu-ml-tls-le
  rules:
    - host: api.test4rest-service.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-balancer
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-balancer
                port:
                  number: 80
